add link animation to mobile nav

--- a/app/index.html
+++ b/app/index.html
@@ -27,12 +27,10 @@
 
         <nav class="nav-burger__nav">
             <ul class="nav-burger__list">
-                <li class="nav-burger__item">
-                    <a href="" class="nav-burger__link">home</a>
-                    <a href="" class="nav-burger__link">portfolio</a>
-                    <a href="" class="nav-burger__link">about</a>
-                    <a href="" class="nav-burger__link">contact</a>
-                </li> 
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline "><span>01</span>home</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>02</span>portfolio</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>03</span>about</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>04</span>contact</a></li>
             </ul>
         </nav>
 
