add x animation and begin responisve styling

--- a/app/index.html
+++ b/app/index.html
@@ -10,31 +10,36 @@
     <title>Kiron Basu</title>
 </head>
 <body>
-    <div class = "nav">
-        <ul class = "nav__links">
-            <li><a href="#">home</a></li>
-            <li><a href="#">portfolio</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">contact</a></li>
-        </ul>
+    <div class="nav-content">
+        <div class = "nav">
+            <ul class = "nav__links">
+                <li><a href="#">home</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
     </div>
+   <div class="burger-content">
     <div class="nav-burger">
         <input type="checkbox" class="nav-burger__checkbox" id="nav-toggle">
 
-        <label for="nav-toggle" class="nav-burger__btn">MENU</label>
+        <label for="nav-toggle" class="nav-burger__btn">
+            <span class="nav-burger__icon">&nbsp;</span>
+        </label>
 
         <div class="nav-burger__background-btn">&nbsp;</div>
 
         <nav class="nav-burger__nav">
             <ul class="nav-burger__list">
-                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline "><span>01</span>home</a></li>
-                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>02</span>portfolio</a></li>
-                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>03</span>about</a></li>
-                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline"><span>04</span>contact</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline ">home</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline">portfolio</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline">about</a></li>
+                    <li class="nav-burger__item"><a href="" class="nav-burger__link nav-burger__underline">contact</a></li>
             </ul>
         </nav>
-
     </div>
+   </div>
     <div class="shooting-star-container">
             <div class="p p-1"></div>
     </div>
