add animations for portfolio section and flexbox

--- a/app/index.html
+++ b/app/index.html
@@ -58,33 +58,45 @@
    
    <main>
         <section class="section-portfolio">
-            <div class = "text-box-wrapper">
-                <div class = "box img-align">
-                    <h3>Box 1</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
-                <div class = "box img-align">
-                    <h3>Box 2</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
-                <div class = "box img-align">
-                    <h3>Box 3</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
-            </div>
-            <div class = "text-box-wrapper">
-                <div class = "box img-align">
-                    <h3>Box 4</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
-                <div class = "box img-align">
-                    <h3>Box 5</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
-                <div class = "box img-align">
-                    <h3>Box 6</h3>
-                    <img src ="/img/nat-1.jpg">
-                </div>
+                <h3 class = "section-heading">Portfolio</h3>
+            <div class="container">
+                <div class = "text-box-wrapper">
+                        <div class = "box img-align">
+                            <h4>Box 1</h4>
+                            <div class="img-container">
+                                    <img src ="/img/nat-1-resize.jpg">
+                                    <div class="card">
+                                            <h4 class = "caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                            <div class="portfolio-btns">
+                                                    <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                                    <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            </div>
+                                    </div>    
+                            </div>
+                            <div class="overlay"></div>
+                        </div>
+                        <div class = "box img-align">
+                            <h4>Box 2</h4>
+                            <img src ="/img/nat-1-resize.jpg">
+                        </div>
+                        <div class = "box img-align">
+                            <h4>Box 3</h4>
+                            <img src ="/img/nat-1-resize.jpg">
+                        </div>
+                    
+                        <div class = "box img-align">
+                            <h4>Box 4</h4>
+                            <img src ="/img/nat-1-resize.jpg">
+                        </div>
+                         <div class = "box img-align">
+                            <h4>Box 5</h4>
+                            <img src ="/img/nat-1-resize.jpg">
+                        </div>
+                        <div class = "box img-align">
+                            <h4>Box 6</h4>
+                            <img src ="/img/nat-1-resize.jpg">
+                        </div>
+                    </div>
             </div>
         </section>
     </main>        
