add animations to all portfolio cards

--- a/app/index.html
+++ b/app/index.html
@@ -64,37 +64,87 @@
                         <div class = "box img-align">
                             <h4>Box 1</h4>
                             <div class="img-container">
-                                    <img src ="/img/nat-1-resize.jpg">
-                                    <div class="card">
-                                            <h4 class = "caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
-                                            <div class="portfolio-btns">
-                                                    <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                                    <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
-                                            </div>
-                                    </div>    
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
                             </div>
-                            <div class="overlay"></div>
+                            <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
                             <h4>Box 2</h4>
-                            <img src ="/img/nat-1-resize.jpg">
+                            <div class="img-container">
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
                             <h4>Box 3</h4>
-                            <img src ="/img/nat-1-resize.jpg">
+                            <div class="img-container">
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
                     
                         <div class = "box img-align">
                             <h4>Box 4</h4>
-                            <img src ="/img/nat-1-resize.jpg">
+                            <div class="img-container">
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
                          <div class = "box img-align">
                             <h4>Box 5</h4>
-                            <img src ="/img/nat-1-resize.jpg">
+                            <div class="img-container">
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
                             <h4>Box 6</h4>
-                            <img src ="/img/nat-1-resize.jpg">
+                            <div class="img-container">
+                                <img src ="/img/nat-1-resize.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
                     </div>
             </div>
