--- a/app/index.html
+++ b/app/index.html
@@ -149,6 +149,39 @@
                     </div>
             </div>
         </section>
+        <section class="section-about">
+            <h3 class = "section-heading">About</h3>
+                <div class="section-about__text-content">
+                    <p class="about-text intro"><strong>I'm a front-end developer and web designer from Wiltshire, UK.</strong></p>
+                <p class="about-text">I have experience working with <span class="underline">React</span>, <span class="underline">Redux</span>, 
+                <span class="underline">HTML</span>, <span class="underline">Javascript </span>and <span class="underline">CSS</span> with preprocessors
+                like <span class="underline">Sass</span> and 'postprocessors' like <span class="underline">PostCSS.</span></p>
+                <p class="cv-text">
+                    I'm passionate about building high quality apps and websites. You can find my CV here: <strong><span class="orange">Kiron Basu</span></strong>    
+                </p>
+                <p class="tools-text">Some of the tools I enjoy using:</p>
+                <div class="section-about__icon-container">
+                    <span class ="inline-block icon icon--javascript-icon icon-small"></span>
+                    <span class ="inline-block icon icon--css-icon icon-shift-up icon-small"></span>
+                    <span class ="inline-block icon icon--html-icon"></span>
+                    <span class ="inline-block icon icon--react-icon icon-shift-left"></span>
+                    <span class ="inline-block icon icon--redux-icon icon-shift-up icon-redux-position"></span>
+                    <span class ="inline-block icon icon--sass-icon icon-shift-up icon-sass-position"></span>
+                </div>
+                
+                <h4>Kiron Basu</h4>
+                <p class="email-text orange">kiron_basu@hotmail.com</p>
+                </div>
+        </section>
+        <section class="section-contact">
+            <h3 class = "section-heading">Contact</h3>
+            <form action="https://formspree.io/kiron_basu@hotmail.com" method="POST">
+                <input type="text" name="name">
+                <input type="email" name="_replyto">
+                <textarea name="message"></textarea>
+                <input type="submit" value="Send">
+              </form>
+        </section>
     </main>        
 </body>
 <script src="scripts/app.js"></script>
