--- a/app/index.html
+++ b/app/index.html
@@ -67,43 +67,43 @@
                 <h3 class = "section section-heading extended-spacing" id = "portfolio-section" data-matching-link="#portfolio-link">Portfolio</h3>
             <div class="container">
                 <div class = "text-box-wrapper">
-                        <div class = "box img-align">
-                            <h4>Box 1</h4>
+                        <div class = "box img-align" id='box1'>
+                            <h4>Weight Tracker</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/weight-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">HTML, CSS, Vanilla JS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/weight-tracker">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/weight-tracker/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
                             <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
-                            <h4>Box 2</h4>
+                            <h4>Smoothie Maker</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/smoothie-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">HTML, CSS, React JS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/smoothie-app">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/smoothie-app/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
                             <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
-                            <h4>Box 3</h4>
+                            <h4>Face Anonymizer</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/face-recognition-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">HTML, CSS, React JS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/face-recognition-app">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/face-recognition-app/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
@@ -111,42 +111,42 @@
                         </div>
                     
                         <div class = "box img-align">
-                            <h4>Box 4</h4>
+                            <h4>Speech Synthesizer</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/speech-synth-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">Javascript, Web Speech API</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/speech-synth-app">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/speech-synth-app/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
                             <div class="card__overlay"></div>
                         </div>
                          <div class = "box img-align">
-                            <h4>Box 5</h4>
+                            <h4>Javascript Analogue Clock</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/js-and-css-clock-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">Vanilla JS and CSS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/js-and-css-clock">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/js-and-css-clock/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
                             <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
-                            <h4>Box 6</h4>
+                            <h4>Keyboard Drumkit</h4>
                             <div class="img-container">
-                                <img src ="/img/nat-1-resize.jpg">
+                                <img src ="/img/keyboard-drumkit-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                                    <h4 class = "card__caption">Vanilla JS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="#">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/keyboard-drumkit">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/keyboard-drumkit/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
@@ -221,7 +221,7 @@
                   </form>
                 <div class="section-contact__footer">
                     <div class="section-contact__footer-wrapper">
-                            <h4 class = "section-contact__footer-text">KIRON BASU twentyeighteen
+                            <h4 class = "section-contact__footer-text">KIRON BASU twentynineteen &nbsp;
                                 <div class="section-contact__icon-container">
                                     <span class ="inline-block icon icon--github-icon icon-shift-up"></span>
                                     <span class ="inline-block icon icon--linkedin-icon"></span>
