--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class = "box img-align" id='box1'>
                             <h4>Weight Tracker</h4>
                             <div class="img-container">
-                                <img src ="/app/img/weight-resize.jpg">
+                                <img src ="./app/img/weight-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">HTML, CSS, Vanilla JS</h4>
                                         <div class="portfolio-btns">
