--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class = "box img-align">
                             <h4>Smoothie Maker</h4>
                             <div class="img-container">
-                                <img src ="/app/img/smoothie-resize.jpg">
+                                <img src ="./app/img/smoothie-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">HTML, CSS, React JS</h4>
                                         <div class="portfolio-btns">
@@ -98,7 +98,7 @@
                         <div class = "box img-align">
                             <h4>Face Anonymizer</h4>
                             <div class="img-container">
-                                <img src ="/app/img/face-recognition-resize.jpg">
+                                <img src ="./app/img/face-recognition-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">HTML, CSS, React JS</h4>
                                         <div class="portfolio-btns">
@@ -113,7 +113,7 @@
                         <div class = "box img-align">
                             <h4>Speech Synthesizer</h4>
                             <div class="img-container">
-                                <img src ="/app/img/speech-synth-resize.jpg">
+                                <img src ="./app/img/speech-synth-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">Javascript, Web Speech API</h4>
                                         <div class="portfolio-btns">
@@ -127,7 +127,7 @@
                          <div class = "box img-align">
                             <h4>Javascript Analogue Clock</h4>
                             <div class="img-container">
-                                <img src ="/app/img/js-and-css-clock-resize.jpg">
+                                <img src ="./app/img/js-and-css-clock-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">Vanilla JS and CSS</h4>
                                         <div class="portfolio-btns">
@@ -141,7 +141,7 @@
                         <div class = "box img-align">
                             <h4>Keyboard Drumkit</h4>
                             <div class="img-container">
-                                <img src ="/app/img/keyboard-drumkit-resize.jpg">
+                                <img src ="./app/img/keyboard-drumkit-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">Vanilla JS</h4>
                                         <div class="portfolio-btns">
