--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                 <span class="underline">HTML</span>, <span class="underline">Javascript </span>and <span class="underline">CSS</span> with preprocessors
                 like <span class="underline">Sass</span> and 'postprocessors' like <span class="underline">PostCSS.</span></p>
                 <p class="cv-text">
-                    I'm passionate about building high quality apps and websites. You can find my CV here: <strong><span class="orange">Kiron Basu</span></strong>    
+                    I'm passionate about building high quality apps and websites. You can find my CV here: <strong><a
+                            href="./app/img/Kiron-Basu-CV-2019.pdf" target="_blank" class="orange">Kiron
+                            Basu</a></strong>    
                 </p>
                 <p class="tools-text">Some of the tools I enjoy using:</p>
                 <div class="section-about__icon-containers">
