--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                     <div class="section-contact__footer-wrapper">
                             <h4 class = "section-contact__footer-text">KIRON BASU twentynineteen &nbsp;
                                 <div class="section-contact__icon-container">
-                                    <a href"https://github.com/Kiron-Basu" class ="inline-block icon icon--github-icon icon-shift-up"></a>
-                                    <span class ="inline-block icon icon--linkedin-icon"></span>
-                                    <span class ="inline-block icon icon--codepen-icon"></span>
+                                    <a href="https://github.com/Kiron-Basu" class ="inline-block icon icon--github-icon icon-shift-up"></a>
+                                    <a href="https://www.linkedin.com/in/kiron-basu-180809182/" class ="inline-block icon icon--linkedin-icon"></a>
+                                    <a href="https://codepen.io/k-i-r-o-n/" class ="inline-block icon icon--codepen-icon"></a>
                                 </div>
                             </h4> 
                     </div>
