--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section class="section section-about" id = "about-section" data-matching-link="#about">
             <h3 class = "section-heading">About</h3>
                 <div class="section-about__text-content">
-                    <p class="about-text intro"><strong>I'm a front-end developer and web designer from Wiltshire, UK.</strong></p>
+                    <p class="about-text intro"><strong>I'm currently a freelance fullstack developer and web designer from Wiltshire, UK.</strong></p>
                 <p class="about-text">I have experience working with <span class="underline">React</span>, <span class="underline">Redux</span>, 
                 <span class="underline">HTML</span>, <span class="underline">Javascript </span>and <span class="underline">CSS</span> with preprocessors
                 like <span class="underline">Sass</span> and 'postprocessors' like <span class="underline">PostCSS.</span></p>
