--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
                             <div class="card__overlay"></div>
                         </div>
                         <div class = "box img-align">
-                            <h4>Keyboard Drumkit</h4>
+                            <h4>Film Lookup App</h4>
                             <div class="img-container">
-                                <img src ="./app/img/keyboard-drumkit-resize.jpg">
+                                <img src ="./app/img/film-lookup-app-resize.jpg">
                                 <div class="card">
                                     <h4 class = "card__caption">Vanilla JS</h4>
                                         <div class="portfolio-btns">
-                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/keyboard-drumkit">View code</a>
-                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/keyboard-drumkit/">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/film-lookup-app">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/film-lookup-app/">View demo</a>
                                         </div>
                                 </div>    
                             </div>
