--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <div class="img-container">
                                 <img src ="./app/img/film-lookup-app-resize.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Vanilla JS and CSS</h4>
+                                    <h4 class = "card__caption">HTML, CSS grid, React JS</h4>
                                         <div class="portfolio-btns">
                                             <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/film-lookup-app">View code</a>
                                             <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/film-lookup-app/">View demo</a>
