--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
                 like <span class="underline">Sass</span> and 'postprocessors' like <span class="underline">PostCSS.</span></p>
                 <p class="cv-text">
                     I'm passionate about building high quality apps and websites. You can find my CV here: <strong><a
-                            href="./app/img/Kiron-Basu-CV-2019.pdf" target="_blank" class="orange">Kiron
-                            Basu</a></strong>    
+                            href="./app/img/Kiron-Basu-CV-2019.pdf" target="_blank" class="orange">(removed temporarily due to spamming)</a></strong>    
                 </p>
                 <p class="tools-text">Some of the tools I enjoy using:</p>
                 <div class="section-about__icon-containers">
