--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                     <h4 class = "card__caption">Vanilla JS</h4>
                                         <div class="portfolio-btns">
                                             <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/keyboard-drumkit">View code</a>
-                                            <a class = "https://kiron-basu.github.io/keyboard-drumkit/">View demo</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/keyboard-drumkit">View demo</a>
                                         </div>
                                 </div>    
                             </div>
