--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
         <section class="section section-about" id = "about-section" data-matching-link="#about">
             <h3 class = "section-heading">About</h3>
                 <div class="section-about__text-content">
-                    <p class="about-text intro"><strong>I'm currently a freelance fullstack developer and web designer from Wiltshire, UK.</strong></p>
+                    <p class="about-text intro"><strong>I'm a fullstack software developer from Wiltshire, UK.</strong></p>
                 <p class="about-text">I have experience working with <span class="underline">React</span>, <span class="underline">Redux</span>, 
-                <span class="underline">HTML</span>, <span class="underline">Javascript </span>and <span class="underline">CSS</span> with preprocessors
-                like <span class="underline">Sass</span> and 'postprocessors' like <span class="underline">PostCSS.</span></p>
+                <span class="underline">HTML</span>, <span class="underline">Typescript </span>, <span class="underline">SASS</span> and 
+                <span class="underline">C# .NET</span>.</p>
                 <p class="cv-text">
-                    I'm passionate about building high quality apps and websites. You can find my CV here: <strong><a
+                    I'm passionate about building high quality applications. You can find my CV here: <strong><a
                             href="./app/img/Kiron-Basu-CV-2019.pdf" target="_blank" class="orange">(removed temporarily due to spamming)</a></strong>    
                 </p>
                 <p class="tools-text">Some of the tools I enjoy using:</p>
@@ -193,7 +193,7 @@
                   </form>
                 <div class="section-contact__footer">
                     <div class="section-contact__footer-wrapper">
-                            <h4 class = "section-contact__footer-text">KIRON BASU twentynineteen &nbsp;
+                            <h4 class = "section-contact__footer-text">KIRON BASU twentytwentyone &nbsp;
                                 <div class="section-contact__icon-container">
                                     <a href="https://github.com/Kiron-Basu" target="_blank" class ="inline-block icon icon--github-icon icon-shift-up"></a>
                                     <a href="https://www.linkedin.com/in/kiron-basu-180809182/" target="_blank" class ="inline-block icon icon--linkedin-icon"></a>
