--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    
    <main>
         <section class="section-portfolio">
-                <h3 class = "section section-heading extended-spacing" id = "portfolio-section" data-matching-link="#portfolio-link">Portfolio</h3>
+                <h3 class = "section section-heading extended-spacing" id = "portfolio-section" data-matching-link="#portfolio-link">This is my old portfolio of projects. I hope to update one day!</h3>
             <div class="container">
                 <div class = "text-box-wrapper">
                         <div class = "box img-align" id='box1'>
