--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
                                 </div>    
                             </div>
                             <div class="card__overlay"></div>
+                        </div> //https://kiron-basu.github.io/soup_kitchen/.
+                    
+                    <div class = "box img-align">
+                            <h4>Soup Kitchen!</h4>
+                            <div class="img-container">
+                                <img src ="./app/img/soup-kitchen.jpg">
+                                <div class="card">
+                                    <h4 class = "card__caption">React, Redux, Typescript, Jest, Enzyme</h4>
+                                        <div class="portfolio-btns">
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/soup_kitchen">View code</a>
+                                            <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/soup_kitchen/">View demo</a>
+                                        </div>
+                                </div>    
+                            </div>
+                            <div class="card__overlay"></div>
                         </div>
             </div>
         </section>
