--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class = "box img-align">
                             <h4>Soup Kitchen!</h4>
                             <div class="img-container">
-                                <img src ="./app/img/soup-kitchen.jpg">
+                                <img src ="./app/img/soup-kitchen.jpeg">
                                 <div class="card">
                                     <h4 class = "card__caption">Redux, Typescript, Jest</h4>
                                         <div class="portfolio-btns">
