--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="img-container">
                                 <img src ="./app/img/soup-kitchen.jpg">
                                 <div class="card">
-                                    <h4 class = "card__caption">Redux, Typescript, Jest</h4>
+                                    <h4 class = "card__caption">Redux, Typescript, Jest, Enzyme</h4>
                                         <div class="portfolio-btns">
                                             <a class = "portfolio-btn portfolio-btn--view" href="https://github.com/Kiron-Basu/soup_kitchen">View code</a>
                                             <a class = "portfolio-btn portfolio-btn--view" href="https://kiron-basu.github.io/soup_kitchen/">View demo</a>
